# aoc-2022-cpp

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  build_examples.sh
.github/workflows/: ci.yml  codeql-analysis.yml
configured_files/: config.hpp.in
src/: CMakeLists.txt  common.cpp  common.hpp  level1.cpp  level1.hpp  level10.hpp  level11.hpp  level12.hpp  level13.hpp  level14.hpp  level15.hpp  level16.hpp  level17.hpp  level18.hpp  level19.hpp  level2.hpp  level20.hpp  level21.hpp  level22.hpp  level23.hpp  level24.hpp  level25.hpp  level3.hpp  level4.hpp  level5.hpp  level6.hpp  level7.hpp  level8.hpp  level9.hpp  main.cpp
test/: CMakeLists.txt  common_tests.cpp  level10_tests.cpp  level11_tests.cpp  level12_tests.cpp  level13_tests.cpp  level14_tests.cpp  level15_tests.cpp  level16_tests.cpp  level17_tests.cpp  level18_tests.cpp  level19_tests.cpp  level1_tests.cpp  level20_tests.cpp  level21_tests.cpp  level22_tests.cpp  level23_tests.cpp  level24_tests.cpp  level25_tests.cpp  level2_tests.cpp  level3_tests.cpp  level4_tests.cpp  level5_tests.cpp  level6_tests.cpp  level7_tests.cpp  level8_tests.cpp  level9_tests.cpp  tests.cpp
